Update BatchFile.java